<resources>
    <string name="app_name">NMedia</string>
    <string name="description_post_autor_avatar">Netology</string>
    <string name="description_post_menu">Menu</string>
    <string name="description_post_view">view</string>
    <string name="countView">123K</string>
    <string name="countLikes">125K</string>
    <string name="countShares">12K</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
</resources>